# RAG

./: pyproject.toml
data/text_files/: doc1.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
